:wrench: FIx z-index of slider buttons

--- a/_sass/landing/work.scss
+++ b/_sass/landing/work.scss
@@ -128,7 +128,7 @@
 		position: fixed;
 		top: 0;
 		right: 0;
-		z-index: 2;
+		z-index: 9999;
 		text-decoration: none;
 
 		font-size: 12px;
